# pozyx-thesis

./: .gitignore  requirements.txt
analysis/: 00_fix_labels.py  00b_split_wild_data.py  01_plot_data.py  01b_view_actions.py  02_data_quality.py  03_data_stats.py  04_select_regions.py  04b_edit_regions.py  05_create_training.py  05b_create_training_from_wild.py  06_create_models.ipynb  06_explore_training.ipynb  falling_stopwatch.py  fridge_stopwatch.py  label_encoder.joblib  pyproject.toml
analysis/.archives/2023-01-18 Dynamic Testing and # of Anchors Testing/: kitchen_analysis.ipynb
analysis/.archives/2023-02-01 New Floorplan Data/: kitchen_analysis.ipynb
analysis/.archives/2023-02-02 Kitchen Activities/: slicingtomato_analysis.ipynb
analysis/2023-01-18 Dynamic Testing and # of Anchors Testing/: zpos_analysis.ipynb
analysis/2023-02-01 New Floorplan Data/: kitchen_analysis.ipynb
analysis/2023-02-01 New Floorplan Data/01_Pictures/: IMG_7292.HEIC
analysis/2023-02-02 Kitchen Activities/: mincegarlic_analysis.ipynb  openingfridge_analysis.ipynb  slicingtomato_analysis.ipynb
analysis/2023-03-08 Kitchen Activities (better Accuracy)/: 00_fix_labels.py  01_plot_data.py  02_data_quality.py  03_data_stats.py  04_plot_ensemble.py  04_select_regions.py  04b_edit_regions.py  05_create_training.py  05b_create_training_from_wild.py  06_explore_training.ipynb  label_encoder.joblib  output_model.joblib
analysis/classification/: 01c_action_stats.py
analysis/data_furniture/: FURNITURE_A8H_1.txt
analysis/data_zpos/: ZPOS_A10_1.txt
analysis/utils/: utils.py
(+876 files in other folders)
