[tool.poetry]
name = "pozyx-analysis"
version = "0.1.0"
description = "Analysis Scripts for my thesis"
authors = ["Steven Phan <snphan@ualberta.ca>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
scipy = "^1.14.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
